--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu&family=Varela+Round&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
+}
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #e2e2e2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* userlist */
+.user-list-main {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
+  background-image: url(assets/wavesOpacity.svg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: auto;
+}
+.user-container {
+  width: 40vw;
+  height: auto;
+  border: 1px solid lightgray;
+  border-radius: 25px;
+  background-color: #ffffff;
+}
+.list {
+  display: flex;
+  align-items: center;
+  padding-left: 14px;
+  border-bottom: 1px solid #e2e2e2;
+  text-decoration: none;
+}
+/* adding scrollbar to list starts here */
+.user-list {
+  padding: 10px;
+  margin: 10px;
+  height: 60vh;
+  overflow-y: scroll;
 }
 
-.App-link {
-  color: #61dafb;
+.user-list::-webkit-scrollbar {
+  width: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-list::-webkit-scrollbar-thumb {
+  background-color: #d8d8d8;
+  border-radius: 20px;
 }
+/* adding scrollbar to list ends here */
+.heading {
+  background-color: #f6f6f6;
+  padding: 10px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
+}
+.heading-text {
+  color: #545454;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
+.user-images {
+  width: 35px;
+  border-radius: 50%;
+}
+.usernames {
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #585858;
+}
+
+/* userlist ends here */
